--- a/Style.css
+++ b/Style.css
@@ -12,32 +12,102 @@
     --Rose-50: hsl(330, 100%, 98%);
 }
 
+
 *,
-*::before,
-*::after {
+::before,
+::after {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
-body {
-    background-color: var(--Stone-100);
+html {
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 16px;
 }
 
-.recipe {
-    background-color: aliceblue;
+body {
+    background-color: var(--Stone-100);
+    line-height: 2.5rem;
+}
+
+h1 {
+    font-size: 3rem;
+}
+
+h2 {
+  font-size: 2rem;
+}
+
+ul,
+ol,
+dl,
+p {
+  font-size: 1rem;
+}
+
+li {
+    line-height: 2.3;
+}
+
+p {
+  line-height: 1.8;
+}
+
+
+main {
+    background-color: var(--White);
+    border-radius: 25px;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: min-content;
-    height: auto;
-    margin: auto;
-    font-family: "Figtree", sans-serif;
-    padding: 2rem;
+    width: 44%;
+    margin: 6.5rem auto;
 }
 
-.recipe_preview {
-    width: 100%;
+
+h1, h2, p {
+    margin-bottom: 2rem;
+}
+
+img {
+    margin-bottom: 2.5rem;
+}
+
+section:not(.recipe__nutrition) {
+    margin-bottom: 2em;
+}
+
+/*li {
+    padding-left: 10px;
+}*/
+
+ul,
+ol {
+    list-style-position: inside;
+}
+
+.recipe {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-family: "Figtree", sans-serif;
+    padding: 2.5rem;
+}
+
+.recipe__preview {
+    border-radius: 10px;
+    width: auto;
+    height: auto;
+}
+
+.recipe__preparation-time {
+    background-color: var(--Rose-50);
+    padding: 1.5rem;
+}
+
+.recipe__preparation-time-title {
+    font-size: 1.3rem;
 }
 
 .recipe__nutrition-table {
@@ -45,4 +115,30 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: normal;
+}
+
+li {
+  background-color: pink;
+  list-style-position: inside;
+
+  list-style: none;
+  position: relative;
+
+  --marker-size: 5px;
+  --gap-right: 15px;
+  --gap-left: 15px;
+
+  padding-left: calc(var(--marker-size) * 2 + var(--gap-right) + var(--gap-left));
+}
+
+li::before {
+  content: '';
+  width: var(--marker-size);
+  height: var(--marker-size);
+  background-color: rgb(0, 0, 0);
+  display: inline-block;
+  border-radius: 50%;
+  position: absolute;
+  top: calc(50% - calc(var(--marker-size) / 2));
+  left: calc(var(--marker-size) / 2 + var(--gap-left));
 }
