--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,35 @@
+@font-face {
+    font-family: "Young Serif";
+    src: url("/fonts/YoungSerif/YoungSerif-Regular.woff2") format("woff2");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Outfit';
+    src: url("/fonts/Outfit/Outfit-Regular.woff2") format("woff2");
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Outfit';
+    src: url("/fonts/Outfit/Outfit-SemiBold.woff2") format("woff2");
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Outfit';
+    src: url("/fonts/Outfit/Outfit-Bold.woff2") format("woff2");
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
 :root {
     --White: hsl(0, 0%, 100%);
 
@@ -10,8 +42,11 @@
 
     --Rose-800: hsl(332, 51%, 32%);
     --Rose-50: hsl(330, 100%, 98%);
-}
 
+    --marker-size: 4px;
+    --gap-right: 25px;
+    --gap-left: 8px;
+}
 
 *,
 ::before,
@@ -21,39 +56,13 @@
     padding: 0;
 }
 
-html {
-  font-family: Helvetica, Arial, sans-serif;
-  font-size: 16px;
-}
-
 body {
     background-color: var(--Stone-100);
-    line-height: 2.5rem;
+    font-family: "Outfit", Helvetica, Arial, sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5rem;
 }
-
-h1 {
-    font-size: 3rem;
-}
-
-h2 {
-  font-size: 2rem;
-}
-
-ul,
-ol,
-dl,
-p {
-  font-size: 1rem;
-}
-
-li {
-    line-height: 2.3;
-}
-
-p {
-  line-height: 1.8;
-}
-
 
 main {
     background-color: var(--White);
@@ -61,30 +70,8 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 44%;
-    margin: 6.5rem auto;
-}
-
-
-h1, h2, p {
-    margin-bottom: 2rem;
-}
-
-img {
-    margin-bottom: 2.5rem;
-}
-
-section:not(.recipe__nutrition) {
-    margin-bottom: 2em;
-}
-
-/*li {
-    padding-left: 10px;
-}*/
-
-ul,
-ol {
-    list-style-position: inside;
+    width: 51%;
+    margin: 7.8em auto;
 }
 
 .recipe {
@@ -101,44 +88,121 @@ ol {
     height: auto;
 }
 
+img {
+    margin-bottom: 3rem;
+}
+
+h1,
+h2 {
+    font-family: "Young Serif";
+    font-weight: 400;
+    margin-bottom: 1.8rem;
+}
+
+h1 {
+    font-size: 2.5rem;
+}
+
+h2 {
+    color: var(--Brown-800);
+    font-size: 1.75rem;
+}
+
+li,
+p {
+    font-family: "Outfit";
+    font-weight: 400;
+    color: var(--Stone-600);
+    line-height: 1.5;
+}
+
+p {
+    margin-bottom: 2rem;
+}
+
+section {
+    margin-bottom: 2rem;
+}
+
+section:last-child {
+    margin-bottom: 0;
+}
+
 .recipe__preparation-time {
     background-color: var(--Rose-50);
-    padding: 1.5rem;
+    padding: 1.6rem;
+    border-radius: 15px;
 }
 
 .recipe__preparation-time-title {
-    font-size: 1.3rem;
+    color: var(--Rose-800);
+    font-size: 1.25rem;
+    padding-bottom: 0.8rem;
 }
+
+li {
+    padding-bottom: 0.5rem;
+    list-style-position: inside;
+    list-style: none;
+    position: relative;
+    padding-left: calc(var(--marker-size) * 2 + var(--gap-right) + var(--gap-left));
+}
+
+ul li::before {
+    content: '';
+    background-color: var(--Brown-800);
+    position: absolute;
+    top: 10px;
+
+}
+
+li::before {
+    width: var(--marker-size);
+    height: var(--marker-size);
+    color: var(--Brown-800);
+    display: inline-block;
+    border-radius: 50%;
+    position: absolute;
+    top: calc(50% - calc(var(--marker-size) / 2));
+    left: calc(var(--marker-size) / 2 + var(--gap-left));
+}
+
+.recipe__ingredients {
+    border-bottom: 1px solid;
+    border-bottom-color: var(--Stone-150);
+    padding-bottom: 1.3rem;
+}
+
+ol {
+    list-style-position: outside;
+    counter-reset: numbers;
+}
+
+ol li::before {
+    counter-increment: numbers;
+    content: counter(numbers) ".";
+    position: absolute;
+    top: auto;
+    left: 8px;
+}
+
+.recipe__instructions {
+    border-bottom: 1px solid;
+    border-bottom-color: var(--Stone-150);
+    padding-bottom: 1.3rem;
+}
+
+strong,
+.recipe__nutrition-amount {
+    font-family: "Outfit";
+    font-weight: 800;
+    color: var(--Brown-800);
+}
+
 
 .recipe__nutrition-table {
     width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: normal;
-}
-
-li {
-  background-color: pink;
-  list-style-position: inside;
-
-  list-style: none;
-  position: relative;
-
-  --marker-size: 5px;
-  --gap-right: 15px;
-  --gap-left: 15px;
-
-  padding-left: calc(var(--marker-size) * 2 + var(--gap-right) + var(--gap-left));
-}
-
-li::before {
-  content: '';
-  width: var(--marker-size);
-  height: var(--marker-size);
-  background-color: rgb(0, 0, 0);
-  display: inline-block;
-  border-radius: 50%;
-  position: absolute;
-  top: calc(50% - calc(var(--marker-size) / 2));
-  left: calc(var(--marker-size) / 2 + var(--gap-left));
 }
