--- a/Style.css
+++ b/Style.css
@@ -202,7 +202,26 @@ strong,
 
 .recipe__nutrition-table {
     width: 100%;
+}
+
+.recipe__nutrition-table tr {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    align-items: normal;
+    gap: 1rem;
+    justify-content: center;
+    padding: 0.7rem 2rem;
+    border-bottom: 1px solid #e4ded8;
+}
+
+.recipe__nutrition-description {
+    margin-bottom: 1.5rem;
+}
+
+.recipe__nutrition-table tr:last-child {
+    border: none;
+    padding-bottom: 0;
+}
+
+.recipe__nutrition-table tr:first-child {
+    padding-top: 0;
 }
