--- a/Style.css
+++ b/Style.css
@@ -1,35 +1,3 @@
-@font-face {
-    font-family: "Young Serif";
-    src: url("/fonts/YoungSerif/YoungSerif-Regular.woff2") format("woff2");
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Outfit';
-    src: url("/fonts/Outfit/Outfit-Regular.woff2") format("woff2");
-    font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Outfit';
-    src: url("/fonts/Outfit/Outfit-SemiBold.woff2") format("woff2");
-    font-weight: 600;
-    font-style: normal;
-    font-display: swap;
-}
-
-@font-face {
-    font-family: 'Outfit';
-    src: url("/fonts/Outfit/Outfit-Bold.woff2") format("woff2");
-    font-weight: bold;
-    font-style: normal;
-    font-display: swap;
-}
-
 :root {
     --White: hsl(0, 0%, 100%);
 
@@ -78,7 +46,6 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    font-family: "Figtree", sans-serif;
     padding: 2.5rem;
 }
 
@@ -95,7 +62,7 @@ img {
 
 h1,
 h2 {
-    font-family: "Young Serif", imes, "Times New Roman", serif;
+    font-family: "Young Serif", "Times New Roman", serif;
     font-weight: 400;
     margin-bottom: 1.8rem;
 }
@@ -140,6 +107,7 @@ section:last-child {
     color: var(--Rose-800);
     font-size: 1.25rem;
     padding-bottom: 0.8rem;
+    margin: 0;
 }
 
 li {
